[gd_scene load_steps=7 format=3 uid="uid://bvkcbv28d388f"]

[ext_resource type="Script" path="res://DynamicMenu.gd" id="1_smgvm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ova2r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_iosna"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_phua3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dnaen"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kd3uu"]

[node name="Node2D" type="Node2D"]

[node name="DynamicMenu" type="Node2D" parent="."]
script = ExtResource("1_smgvm")

[node name="PanelContainer" type="PanelContainer" parent="DynamicMenu"]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="DynamicMenu/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="DynamicMenu/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Button" parent="DynamicMenu/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_ova2r")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_iosna")
theme_override_styles/hover = SubResource("StyleBoxEmpty_phua3")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_dnaen")
theme_override_styles/normal = SubResource("StyleBoxEmpty_kd3uu")
keep_pressed_outside = true
text = " Title"
alignment = 0

[node name="Button" type="Button" parent="DynamicMenu/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = " _ "

[node name="Button2" type="Button" parent="DynamicMenu/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = " X "

[node name="ScrollContainer" type="ScrollContainer" parent="DynamicMenu/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="DynamicMenu/PanelContainer/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Label" type="Label" parent="DynamicMenu/PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "a
a
a
a
a
a
a
a
aaaaaaaaaaaaaaaaaaaa
a
a
a
a
a
a
a
a
a"

[connection signal="tree_exiting" from="DynamicMenu" to="DynamicMenu" method="_on_tree_exiting"]
[connection signal="button_down" from="DynamicMenu/PanelContainer/VBoxContainer/HBoxContainer/Label" to="DynamicMenu" method="_on_label_button_down"]
[connection signal="button_up" from="DynamicMenu/PanelContainer/VBoxContainer/HBoxContainer/Label" to="DynamicMenu" method="_on_label_button_up"]
[connection signal="child_entered_tree" from="DynamicMenu/PanelContainer/VBoxContainer/ScrollContainer/VBoxContainer" to="DynamicMenu" method="_on_v_box_container_child_entered_tree"]
